--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,15 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "guzzle/http": "~3.7.0"
+        "php": ">=5.3.0"
     },
     "require-dev": {
+        "guzzle/http": "~3.7.0",
         "symfony/serializer": "~2.4.0"
     },
     "suggest": {
-        "guzzle/http": "~3.7"
+        "guzzle/http": "for the Yandex Adapter",
+        "symfony/serializer": "for the Yandex Adapter"
     },
     "autoload": {
         "psr-0": {
