--- a/composer.json
+++ b/composer.json
@@ -12,20 +12,27 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.5.9"
     },
     "require-dev": {
-        "guzzle/http": "~3.7.0",
-        "symfony/serializer": "~2.4.0"
+        "guzzle/guzzle": "~3.7",
+        "symfony/serializer": "~2.4|~3.0"
     },
     "suggest": {
-        "guzzle/http": "for the Yandex Adapter",
+        "guzzle/guzzle": "for the Yandex Adapter",
         "symfony/serializer": "for the Yandex Adapter"
     },
     "autoload": {
-        "psr-0": {
+        "psr-4": {
             "FDevs\\Photatoes\\": "src/"
-        }
+        },
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
     },
-    "minimum-stability": "dev"
+    "autoload-dev": {
+        "psr-4": {
+            "FDevs\\Photatoes\\Tests\\": "tests/"
+        }
+    }
 }
